Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Street_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IP_Street_Invoice__c</fullName>
    <label>Street (Invoice)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>