Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Student__c.field-meta.xml
<CustomField>
    <fullName>IP_Student__c</fullName>
    <label>Student</label>
    <length>5</length>
    <type>Text</type>
</CustomField>