Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Student_Loan__c.field-meta.xml
<CustomField>
    <fullName>IP_Student_Loan__c</fullName>
    <label>Student Loan</label>
    <length>10</length>
    <type>Text</type>
</CustomField>