Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Suppression_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Suppression_Code__c</fullName>
    <label>Suppression Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>