Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Tempest_Department__c.field-meta.xml
<CustomField>
    <fullName>IP_Tempest_Department__c</fullName>
    <label>Tempest Department</label>
    <length>5</length>
    <type>Text</type>
</CustomField>