Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Tempest_Division__c.field-meta.xml
<CustomField>
    <fullName>IP_Tempest_Division__c</fullName>
    <label>Tempest Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>