Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_TimesheetID__c.field-meta.xml
<CustomField>
    <fullName>IP_TimesheetID__c</fullName>
    <label>Timesheet SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>