Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_TimsheetID__c.field-meta.xml
<CustomField>
    <fullName>IP_TimsheetID__c</fullName>
    <label>Timesheet ID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>