Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_TransferType__c.field-meta.xml
<CustomField>
    <fullName>IP_TransferType__c</fullName>
    <label>Transfer Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>