Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_Unit__c.field-meta.xml
<CustomField>
    <fullName>IP_Unit__c</fullName>
    <label>Unit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>