Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>IP_VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>