Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_WeekendingDate__c.field-meta.xml
<CustomField>
    <fullName>IP_WeekendingDate__c</fullName>
    <label>Weekending date</label>
    <type>Date</type>
</CustomField>