Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_WorkerPayroll_Ref__c.field-meta.xml
<CustomField>
    <fullName>IP_WorkerPayroll_Ref__c</fullName>
    <label>WorkerPayroll Ref</label>
    <length>20</length>
    <type>Text</type>
</CustomField>