Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/IP_WTR__c.field-meta.xml
<CustomField>
    <fullName>IP_WTR__c</fullName>
    <label>WTR</label>
    <length>5</length>
    <type>Text</type>
</CustomField>