Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/Override_status__c.field-meta.xml
<CustomField>
    <fullName>Override_status__c</fullName>
    <formula>IF(
  IP_TransferType__c = &quot;Holiday&quot;,
  IF(
    Requested_Time__c = &quot;Half Day&quot;,
    1,
    0
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Override_status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>