Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/Requested_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Time__c</fullName>
    <label>Requested Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>