Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/fields/TestValidation__c.field-meta.xml
<CustomField>
    <fullName>TestValidation__c</fullName>
    <label>TestValidation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>