Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/validationRules/TestValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TestValidation</fullName>
    <active>true</active>
    <description>TestValidation for Test class</description>
    <errorConditionFormula>AND(NOT( ISNEW() ), TestValidation__c =&apos;test&apos;)</errorConditionFormula>
    <errorMessage>Testing error</errorMessage>
</ValidationRule>