Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/listViews/Etimesheet.listView-meta.xml
<ListView>
    <fullName>Etimesheet</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IP_Passed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Etimesheet</label>
</ListView>