Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/listViews/Not_Passed.listView-meta.xml
<ListView>
    <fullName>Not_Passed</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IP_Passed__c</columns>
    <columns>IP_TransferType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IP_Passed__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>IP_TransferType__c</field>
        <operation>equals</operation>
        <value>TimesheetLineData</value>
    </filters>
    <label>Not Passed-PDF Timesheet</label>
    <language>en_US</language>
</ListView>