Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/listViews/Tate.listView-meta.xml
<ListView>
    <fullName>Tate</fullName>
    <columns>NAME</columns>
    <columns>IP_AssignmentRef__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IP_BrandCompanyCode__c</field>
        <operation>equals</operation>
        <value>Tate</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Tate</label>
</ListView>