Frankbelford/uatv1ba/force-app/main/default/objects/IP_OutboundDataTransfer__c/listViews/TimesheetLineData2.listView-meta.xml
<ListView>
    <fullName>TimesheetLineData2</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IP_Passed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IP_TimesheetID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IP_Passed__c</field>
        <operation>equals</operation>
    </filters>
    <label>TimesheetLineData - Not Passed</label>
    <language>en_US</language>
</ListView>